--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
+env_logger = { version = "0.11.3" }
 kafka = "0.10"
+log = { version = "0.4.21" }
 openssl = "0.10.64"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
