--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ env_logger = { version = "0.11.3" }
 kafka = "0.10"
 log = { version = "0.4.21" }
 openssl = "0.10.64"
+regex = "1.11.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
 prometheus_exporter = { version = "0.8", features = ["logging"] }
